--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hmart – Electronics eCommerce HTML Template</title>
+    <title>Google Findexor – googlefindexor.com</title>
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Hmart-Smart Product eCommerce html Template">
+    <meta name="description" content="Google Findexor – googlefindexor.com">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static '' %}assets/images/favicon.ico" />
     <!-- CSS
