--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -13,7 +13,7 @@
                     <div class="top-nav">
                         <ul>
                             <li><a href="tel:0123456789"><i class="fa fa-phone"></i> +012 3456 789</a></li>
-                            <li><a href="mailto:demo@example.com"><i class="fa fa-envelope-o"></i> demo@example.com</a></li>
+                            <li><a href="mailto:demo@example.com"><i class="fa fa-envelope-o"></i> gfindexor@gmail.com</a></li>
                             <li><a href="my-account.html"><i class="fa fa-user"></i> Account</a></li>
                         </ul>
                     </div>
