--- a/home/templates/main/base/homebase.html
+++ b/home/templates/main/base/homebase.html
@@ -26,6 +26,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+<script src="https://kit.fontawesome.com/bff06f655c.js" crossorigin="anonymous"></script>
 <body>
 <div class="wrapper">
 
